// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component MenuDrawer should render empty drawer 1`] = `
<body>
  <div />
</body>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-modal MuiModal-root css-46941x-MuiModal-root-MuiDrawer-root"
    id="menudrawer"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      aria-modal="true"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorLeft css-cyqh1t-MuiPaper-root-MuiDrawer-paper"
      role="dialog"
      style="--Paper-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);"
      tabindex="-1"
    >
      <nav
        class="MuiList-root MuiList-padding css-slfd0z-MuiList-root"
        id="mainMenu"
        tabindex="-1"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-wrap-xs-nowrap css-81r0vt-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-zeroMinWidth MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-12 css-gc29ga-MuiGridLegacy-root"
          >
            <a
              class="noHover css-1oqhn84"
              data-analyticsid="main-menu-logo-link"
              data-testid="main-menu-logo-link"
              href="test"
              id="main-menu-logo-link"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
              title="test"
            >
              <div
                class="test"
                style="height: 50px; width: 160px; margin: 8px auto;"
              >
                test
              </div>
            </a>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 css-123wywt-MuiGridLegacy-root"
          >
            <button
              aria-label="Close menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-idy4w4-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
                />
              </svg>
            </button>
          </div>
        </div>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-b9nkh6-MuiListItem-root"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters menu-item-container css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
            id="menu-item-0"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-15grfq4-MuiListItemText-root"
              id="menu-itemText-0"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
              >
                Primary text 0
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-1a1whku-MuiTypography-root"
              >
                secondary text 0
              </p>
            </div>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
        />
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-b9nkh6-MuiListItem-root"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters menu-item-container css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
            id="menu-item-2"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-15grfq4-MuiListItemText-root"
              id="menu-itemText-2"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
              >
                Primary text 1
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-1a1whku-MuiTypography-root"
              >
                secondary text 1
              </p>
            </div>
          </div>
        </li>
      </nav>
      <div
        data-testid="after-menu-drawer"
        id="afterMenuDrawer"
        tabindex="-1"
      />
      <div
        class="MuiBox-root css-18s52uq"
      >
        CRICOS Provider No: 
        <a
          class="css-1oqhn84"
          data-analyticsid="cricos-link"
          data-testid="cricos-link"
          href="http://www.uq.edu.au/about/cricos-link"
          id="cricos-link"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
          title="CRICOS Provider No: "
        >
          00025B
        </a>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider and skip nav button 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-docked css-ihupkb-MuiDrawer-docked"
      id="menudrawer"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-1lwhjos-MuiPaper-root-MuiDrawer-paper"
        style="--Paper-shadow: none;"
      >
        <nav
          class="MuiList-root MuiList-padding css-slfd0z-MuiList-root"
          id="mainMenu"
          tabindex="-1"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-wrap-xs-nowrap css-81r0vt-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-zeroMinWidth MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-12 css-gc29ga-MuiGridLegacy-root"
            >
              <a
                class="noHover css-1oqhn84"
                data-analyticsid="main-menu-logo-link"
                data-testid="main-menu-logo-link"
                href="test"
                id="main-menu-logo-link"
                rel="noopener noreferrer"
                tabindex="0"
                target="_blank"
                title="test"
              >
                <div
                  class="test"
                  style="height: 50px; width: 160px; margin: 8px auto;"
                >
                  test
                </div>
              </a>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 css-123wywt-MuiGridLegacy-root"
            >
              <button
                aria-label="Close menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-idy4w4-MuiSvgIcon-root"
                  data-testid="KeyboardArrowLeftIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="Skip navigation"
            class="css-16sk7k9"
            id="skipNav"
            tabindex="1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary skipNavButton css-74d805-MuiButtonBase-root-MuiButton-root"
              tabindex="-1"
              type="button"
            >
              Skip navigation
            </button>
          </div>
          <li
            class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-b9nkh6-MuiListItem-root"
          >
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters menu-item-container css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
              id="menu-item-0"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root MuiListItemText-multiline css-15grfq4-MuiListItemText-root"
                id="menu-itemText-0"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                >
                  Primary text 0
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-1a1whku-MuiTypography-root"
                >
                  secondary text 0
                </p>
              </div>
            </div>
          </li>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
          />
          <li
            class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-b9nkh6-MuiListItem-root"
          >
            <div
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters menu-item-container css-4bx69l-MuiButtonBase-root-MuiListItemButton-root"
              id="menu-item-2"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root MuiListItemText-multiline css-15grfq4-MuiListItemText-root"
                id="menu-itemText-2"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-rizt0-MuiTypography-root"
                >
                  Primary text 1
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-1a1whku-MuiTypography-root"
                >
                  secondary text 1
                </p>
              </div>
            </div>
          </li>
        </nav>
        <div
          data-testid="after-menu-drawer"
          id="afterMenuDrawer"
          tabindex="-1"
        />
        <div
          class="MuiBox-root css-18s52uq"
        >
          CRICOS Provider No: 
          <a
            class="css-1oqhn84"
            data-analyticsid="cricos-link"
            data-testid="cricos-link"
            href="http://www.uq.edu.au/about/cricos-link"
            id="cricos-link"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
            title="CRICOS Provider No: "
          >
            00025B
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;
